Changes for 1.7.0.3
* Updating packaged JRE to Java 7 update 21 for x86. (veqryn)

* Made fuelCost no longer charge for allied air dependants, paratroopers, and owned air on owned fighters not making an attack. (veqryn)

* Created new game option property, "Use Fuel Cost", which will control if we charge for fuel in our movement. (veqryn)

* Added an option to turn off the end of turn report, into the game menu bar. (veqryn)

* Created new engine preference option to set the maximum memory used for triplea, for joining, hosting, and also an option to have triplea always restart with higher memory maximum. (veqryn)

* Created new option in engine preferences to show engine log console, and also had the console show current memory usage. (veqryn)

* Reducing maximum memory to 896mb, down from 1024mb, in order to stop these errors from happening, and not allowing engine to add 20% to this when joining online games or hosting. (veqryn)

* Figuring out some user's Java jvm's and/or the JRE included with triplea, only allow up to xmx 1024mb of memory maximum, and that the program completely fails when going over this limit, often causing the user to be unable to join or host games online. (veqryn & diaz)

* Fixing some lock not held errors. (veqryn)

* Fixed bug causing triggered notifications to not use local images when shown on a client computer. (veqryn)

* Not allowing scrambling question when only and SBR raid is in a territory and scramble to SBR is turned off. (veqryn)

* Fixed bug causing Territory Effects to not be applied at all, ever. Also fixed possible issue with 'choose best roll' in low luck. (veqryn)

* Fixed bug causing national objectives which rewarded players on a per-territory basis using the "each" modifier to not work. (veqryn)

* Fixed bug causing paratrooping land units who's air transports were hit by AA fire to not be removed from the battle. (veqryn)
