@@ -226,7 +226,7 @@ public class GridGameFrame extends MainGameFrame
 		m_chatSplit.setOneTouchExpandable(true);
 		m_chatSplit.setDividerSize(8);
 		m_chatSplit.setResizeWeight(0.95);
-		if (MainFrame.getInstance().getChat() != null)
+		if (MainFrame.getInstance() != null && MainFrame.getInstance().getChat() != null)
 		{
 			m_chatPanel = new ChatPanel(MainFrame.getInstance().getChat());
 			m_chatPanel.setPlayerRenderer(new PlayerChatRenderer(m_game, null));
